<?xml version="1.0"?>
<package format="2">
  <name>super_pkg</name>
  <version>0.0.0</version>
  <description>The super_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dannyel@todo.todo">dannyel</maintainer>

  <license>BSD</license>


  <author email="dannyel.2511@gmail.com">Daniel Jeronimo</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dannyel_pkg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>dannyel_pkg</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>dannyel_pkg</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
